--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,8 @@ dependencies:
   cupertino_icons: ^1.0.6
   flutter_svg: ^2.0.17
   flutter_screenutil: ^5.9.3
+  shared_preferences: ^2.3.2
+  flutter_riverpod: ^2.6.1
 
 dev_dependencies:
   flutter_test:
